Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63865

[xcb] Synthetic mouse enter event position is has incorrect values in HiDPI mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.6.1, 5.6.2, 5.6.3, 5.7, 5.8, 5.9
    • QPA: X11/XCB
    • None
    • 8aadfbc6572b0cbb8d435ceb7cd288c9d5cb909c

    Description

      When closing modal dialog on X11 platform, we simulate mouse enter event. In HiDPI mode mouse position on synthetic enter event is incorrect due to missing logical->native pixels conversion.

      Task caused by QTBUG-35109.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes